@@ -5,6 +5,7 @@ import static ca.bc.gov.nrs.vdyp.forward.ForwardPass.PASS_2;
 import static ca.bc.gov.nrs.vdyp.forward.ForwardPass.PASS_3;
 import static ca.bc.gov.nrs.vdyp.forward.ForwardPass.PASS_4;
 import static ca.bc.gov.nrs.vdyp.forward.ForwardPass.PASS_5;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
@@ -16,6 +17,7 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.zip.ZipFile;
 
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
@@ -29,7 +31,6 @@ import ca.bc.gov.nrs.vdyp.test.TestUtils;
 
 class ForwardProcessorTest {
 
-	@SuppressWarnings("unused")
 	private static final Logger logger = LoggerFactory.getLogger(ForwardProcessorTest.class);
 
 	private static Set<ForwardPass> vdypPassSet = new HashSet<>(Arrays.asList(PASS_1, PASS_2, PASS_3, PASS_4, PASS_5));
@@ -48,21 +49,47 @@ class ForwardProcessorTest {
 		Path resourceDirectory = Paths.get("src", "test", "resources", "output");
 		Files.createDirectories(resourceDirectory);
 
-		Path zipFile = Paths.get(resourceDirectory.toString(), this.getClass().getSimpleName() + ".zip");
-		Files.deleteIfExists(zipFile);
+		Path zipFilePath = Paths.get(resourceDirectory.toString(), this.getClass().getSimpleName() + ".zip");
+		Files.deleteIfExists(zipFilePath);
+
+		Path zipFileFromStreamPath = Paths
+				.get(resourceDirectory.toString(), this.getClass().getSimpleName() + "FromStream.zip");
 
 		try {
-			outputResolver.generate(zipFile);
+			outputResolver.generate(zipFilePath);
+			byte[] zipFileBytes = Files.readAllBytes(zipFilePath);
 
-			InputStream os = outputResolver.generateStream();
-
-			byte[] zipFileBytes = Files.readAllBytes(zipFile);
-			byte[] zipStreamBytes = os.readAllBytes();
+			InputStream is = outputResolver.generateStream();
+			byte[] zipStreamBytes = is.readAllBytes();
+			Files.write(zipFileFromStreamPath, zipStreamBytes);
 
 			assertTrue(zipFileBytes.length == zipStreamBytes.length);
-			assertTrue(Arrays.equals(zipFileBytes, zipStreamBytes));
+
+			try (ZipFile zipFileFromStream = new ZipFile(zipFileFromStreamPath.toFile())) {
+				try (ZipFile zipFileFromFile = new ZipFile(zipFilePath.toFile())) {
+
+					var streamEntries = zipFileFromStream.entries().asIterator();
+					var fileEntries = zipFileFromFile.entries().asIterator();
+
+					while (streamEntries.hasNext()) {
+						assertTrue(fileEntries.hasNext());
+
+						var streamEntry = streamEntries.next();
+						var fileEntry = fileEntries.next();
+
+						logger.info(
+								"Saw file entry {} and stream entry {}", fileEntry.getName(), streamEntry.getName()
+						);
+						assertTrue(streamEntry.hashCode() == fileEntry.hashCode());
+						assertTrue(streamEntry.getName().equals(fileEntry.getName()));
+					}
+
+					assertFalse(fileEntries.hasNext());
+				}
+			}
 		} finally {
-			Files.delete(zipFile);
+			Files.delete(zipFilePath);
+			Files.delete(zipFileFromStreamPath);
 		}
 	}
 }
